--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
-    "node": "^19.6.0",
+    "node": "^19.8.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.21",
     "pm2": "^5.2.2",
