--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "start-dev": "nodemon index.js",
+    "start-webhook": "nodemon webhook/stripeWebhook.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "data:import": "node seed.js"
   },
@@ -27,6 +28,7 @@
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
     "node": "^19.8.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.21",
     "pm2": "^5.2.2",
