--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "start-dev": "nodemon index.js",
+    "node": "node index.js",
     "start-webhook": "nodemon webhook/stripeWebhook.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "data:import": "node seed.js"
