--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
     "node": "^19.8.1",
+    "node-geocoder": "^4.2.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.21",
