--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
-    "mongoose-sequence": "^5.3.1",
+    "mongoose-sequence": "^what5.3.1",
     "multer": "^1.4.5-lts.1",
     "node": "^19.8.1",
     "node-geocoder": "^4.2.0",
