new update by pradeep

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "commonjs",
+  "homepage": "https://cropglobalservices.com/admin/",
   "scripts": {
     "start": "nodemon index.js",
     "start-dev": "nodemon index.js",
