--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express-validator": "^6.15.0",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "mongoose": "^6.8.2",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
@@ -34,6 +36,8 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.21",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7",
     "pm2": "^5.2.2",
     "react-router-dom": "^6.8.1",
     "shortid": "^2.2.16",
