--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^6.8.1",
     "shortid": "^2.2.16",
     "stripe": "^11.18.0",
+    "table": "^6.8.1",
     "twilio": "^4.8.0",
     "validator": "^13.7.0"
   }
