--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
