--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "formidable": "^2.1.1",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
@@ -44,6 +45,8 @@
     "pdfmake": "^0.2.7",
     "pm2": "^5.2.2",
     "react-router-dom": "^6.8.1",
+    "rembg-node": "^2.0.1",
+    "sharp": "^0.32.1",
     "shortid": "^2.2.16",
     "stripe": "^11.18.0",
     "table": "^6.8.1",
