--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "stripe": "^11.18.0",
     "table": "^6.8.1",
     "twilio": "^4.8.0",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   }
 }
