--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.21",
+    "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "pdfmake": "^0.2.7",
     "pm2": "^5.2.2",
