--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "express-validator": "^6.15.0",
     "formidable": "^2.1.1",
     "fs-extra": "^11.1.1",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "mongoose-sequence": "^5.3.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node": "^19.8.1",
     "node-fetch": "^3.3.1",
