--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rembg-node": "^2.0.1",
     "sharp": "^0.32.1",
     "shortid": "^2.2.16",
+    "start": "^5.1.0",
     "stripe": "^11.18.0",
     "table": "^6.8.1",
     "twilio": "^4.8.0",
